--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "d",
+  "name": "ws-grillo-messenger",
   "version": "1.0.0",
   "description": "ws messenger app",
   "main": "server.js",
@@ -21,5 +21,11 @@
   "bugs": {
     "url": "https://github.com/EvanGrillo/ws-grillo-messenger/issues"
   },
-  "homepage": "https://github.com/EvanGrillo/ws-grillo-messenger#readme"
+  "homepage": "https://github.com/EvanGrillo/ws-grillo-messenger#readme",
+  "dependencies": {
+    "ws": "^7.4.3"
+  },
+  "engines": {
+    "node": "14.x"
+  }
 }
